# centralized-exchange

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  markets.json
apps/api-server/: Cargo.toml  build.rs
apps/api-server/src/: handlers.rs  main.rs  model.rs
apps/api-server/src/handler/: kline_handlers.rs  mod.rs  order_handlers.rs
apps/db/: Cargo.toml
apps/db/migrations/: 20260407_init.sql
apps/db/src/: main.rs  order_workder.rs  trade_worker.rs
apps/db/src/migrations/: 20260407_init.sql
apps/engine/: Cargo.toml  build.rs
apps/engine/src/: engine.rs  ledger.rs  lib.rs  main.rs  model.rs  orderbook.rs  publisher.rs  trade.rs  utils.rs  worker.rs
apps/engine/src/bank/: ledger.rs  mod.rs
apps/engine/src/orderbook/: mod.rs
apps/engine/src/trade/: bank.rs  engine.rs  exchange.rs  model.rs  orderbook.rs  utils.rs  worker.rs
apps/engine/src/trade/engine/: engine_tests.rs
apps/engine/src/trade/orderbook/: orderbook_tests.rs
apps/frontend/: Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: AppLayout.tsx  Appbar.tsx  Markets.tsx  SwapUI.tsx  TradeView.tsx
apps/frontend/src/components/depth/: AskTable.tsx  BidTable.tsx  Depth.tsx
apps/frontend/src/hooks/: usePlaceOrder.ts
apps/frontend/src/page/: Landing.tsx  Trade.tsx
apps/frontend/src/proto/: exchange.ts
apps/frontend/src/types/: KlineTypes.ts  depthTypes.ts  marketTypes.ts  trades.ts
apps/frontend/src/utils/: ChartManager.ts  SignalingManager.ts  httpClient.ts
apps/websocket-server/: Cargo.toml  build.rs
apps/websocket-server/src/: aggregator.rs  candle.rs  handler.rs  main.rs  model.rs  redis.rs  state.rs
apps/ws-server/: Cargo.toml
proto/: exchange.proto  order.proto
