[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"]}
axum = {version = "*", features = ["macros"]}
tower-http ={ version = "*", features = ["cors"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
sqlx = { version = "*", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal" ] }
