[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
tokio = { version = "1.0", features = ["full"]}
axum = {version = "*", features = ["macros"]}
tower-http ={ version = "*", features = ["cors"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
sqlx = { version = "*", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal" ] }
chrono ={ version = "*", features = ["serde"]}
