[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
deadpool-redis = "0.14"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio = { version = "*", features = ["full"]}
axum = {version = "*", features = ["macros"]}
tower-http ={ version = "*", features = ["cors"]}
serde = {version = "*", features = ["derive"]}
serde_json = "*"
serde_with = "3.0"
sqlx = { version = "*", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono", "rust_decimal" ] }
chrono ={ version = "*", features = ["serde"]}
prost = "0.14.3"
futures-util = "0.3"
dashmap = "6.1.0"

[build-dependencies]
prost-build = "0.14.3"
