[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "*", features = ["full"]}
sqlx = { version = "*", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }
chrono = { version = "*", features = ["serde"] }
prost = "0.14.3"
redis = {version = "*", features = ["tokio-comp", "aio"]}

[build-dependencies]
prost-build = "0.14.3"