[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "1.0.5", features = ["tokio-comp"] }
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
prost = "0.14.3"
rand = { version = "0.8", features = ["small_rng"] }
tokio = {version = "1.50.0", features = ["full"]}
dotenvy = "0.15"
[build-dependencies]
prost-build = "0.14.3"
