[package]
name = "websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
dashmap = "*"
tokio = { version = "1.0", features = ["full"]}
futures-util = "0.3"
axum = { version = "0.8.8", features = ["ws"] }

[build-dependencies]
prost-build = "0.14.3"
