[package]
name = "websocket-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
dashmap = "*"
tokio = { version = "1.0", features = ["full"]}
futures-util = "0.3"
axum = { version = "0.8.8", features = ["ws"] }
redis = {version = "*", features = ["tokio-comp", "aio"]}
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
tokio-stream = { version = "*", features = ["sync"] }
prost = "0.14.3"

[build-dependencies]
prost-build = "0.14.3"
